package domain.enums;

public enum CardType {
    EXPLODING_KITTEN,
    DEFUSE,
    SKIP,
    ATTACK,
    SHUFFLE,
    SEE_THE_FUTURE,
    FAVOR,
    NOPE,
    CAT_CARD
}