package domain.enums;

public enum GameStatus {
    ACTIVE,
    ENDED
}